--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -261,11 +261,17 @@ span.font_icon{
 .header{ margin:15px 0}
 .navbar-fixed-top{width:310px; left:auto; z-index:1051;}
 .navbar-fixed-top.language{
-  right: 300px; text-align: right;
+   text-align: right;
   //.btn-default{ border-width: 0px 2px;}
   .btn{.sans-serif;text-transform: uppercase; color:@rouge; padding:9px 12px; background-color: transparent; border-color:transparent; border-radius: 0;opacity: 0.65}
   .btn:hover{opacity: 1;border-color:@rouge; }
   .btn.disabled{border-color:@rouge;border-radius: 0; opacity: 1}
+}
+@media screen and (max-width: @min_xs) {
+		.navbar-fixed-top.language{right: 20px;}
+}
+@media screen and (min-width: @min_xs) {
+		.navbar-fixed-top.language{right: 300px;}
 }
 .navbar-fixed-top.displayed{width:100%; left:0}
 @media screen and (min-width: @min_xs) and (max-width: @min_sm){
