--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -265,12 +265,12 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		color:@grey;
 }
 
-.bandeau {
+.bandeau img{
 		width: 100%;
 		margin-bottom: 25px;
 }
 
-.contenu_article {
+.contenu_article p{
 		text-align:justify;
 }
 
