--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -244,10 +244,13 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
     {
        width:60%; 
        float:right;
-       border-top: 1px solid black;
        padding-left: 10px;
+							color:black;
     }
-				
+.complement.chapeau{
+		color:@grey;
+		height: 50px;
+}
 
 /*PRESENTATION ARTICLE FOI*/
 
