--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -238,18 +238,25 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 .image{
    width:40%; 
    float:left;
+			padding-top: 12px;
 }
- 
+
+.articlePresentation{
+									height:150px;
+}
 .complement
     {
        width:60%; 
        float:right;
        padding-left: 10px;
 							color:black;
+
     }
 .complement.chapeau{
 		color:@grey;
 		height: 50px;
+		font-size: 12px;
+  line-height: 13px;
 }
 
 /*PRESENTATION ARTICLE FOI*/
