--- a/theme/foi/templates/blocks/contentList.html
+++ b/theme/foi/templates/blocks/contentList.html
@@ -66,20 +66,19 @@
                 </div>
                 <!--PRESENTATION ARTICLES-->
                 <div  ng-switch-when="3">
-                    <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articlePresentation" ng-class="contentListCtrl.columns" >
+                    <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articlePresentation col-sm-4" ng-class="contentListCtrl.columns" >
                         <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
-                            <div class="image col-sm-3">
+                            <div class="list-item-img">
                                 <img class="img-responsive" ng-if="content.fields.image"
                                     ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{height:'400px',mode:'boxed'}) }}"
                                     alt="{{ content.fields.text }}"/>
                             </div>
                             
-                            <div class="complement col-sm-3">
-                                <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
-                                <h4 class="list-item-title capital"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
-                                </h4>
+                            <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
+                            <h4 class="list-item-title capital"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
                                 <p class="chapeau">{{content.fields.summary}}</p>
-                            </div>                   
+                            </h4>
+                   
                             
                         </a>
                         
