--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -234,26 +234,26 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 /*LISTE ARTICLE*/
 .list-item-title{
   padding:0 12px;
-  color:black;p{color:@grey}
-  margin-bottom: 0;
-  position: relative; z-index:2;
-  span{line-height: 1em; display: inline-block; vertical-align: middle}
-}
-.list-item-title.chapeau{
+  color:black;
+		margin-bottom: 0;
 		position: relative;
-		z-index: 2;
-		text-align: center;
-		width:60%; 
-		float:right;
-		padding-left: 10px;
-		color:@grey;
-		height: 50px;
-		font-size: 12px;
-  line-height: 13px;
-}	
+		z-index:2;
+		p{
+				color:@grey;
+				text-align: justify;
+				float:right;
+				padding-left: 10px;
+				color:@grey;
+				height: 50px;
+				font-size: 12px;
+				line-height: 13px;
+  }
+		span{line-height: 1em; display: inline-block; vertical-align: middle; margin-bottom:10px;}
+}
+
 .list-item-img{
 		position:relative;
-		width:100%;
+		width:40%;
 		overflow:hidden;
 		float:left;
 			padding-top: 12px;
