--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -239,14 +239,13 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		position: relative;
 		z-index:2;
 		p{
-				color:@grey;
-				text-align: justify;
+				color:black;
+				text-align: left;
 				float:right;
-				padding-left: 10px;
-				color:@grey;
 				height: 50px;
-				font-size: 12px;
-				line-height: 13px;
+				font-size: 13px;
+				line-height: 14px;
+				overflow:hidden;
   }
 		span{line-height: 1em; display: inline-block; vertical-align: middle; margin-bottom:10px;}
 }
