--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -263,7 +263,9 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 }
 
 .articlePresentation{
-		height:150px;
+		height: 150px;
+  overflow-y: hidden;
+  margin-bottom: 30px;
 }
 
 
