--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -1,15 +1,52 @@
 <div class="row">
-	<div class="col-sm-8 col-sm-push-2" >
 			<!--<p class="categorie_article">{{contentDetailCtrl.content.taxonomy['5a114f1b396588d22856706f']}}</p>
 			<p class="categorie_article">{{contentDetailCtrl.getTermInTaxo("5a114f1b396588d22856706f",contentDetailCtrl.content.taxonomy['5a114f1b396588d22856706f'][0])}}</p>-->
 <!--			<span ng-repeat="taxo in contentDetailCtrl.content['taxonomy.5a114f1b396588d22856706f'] track by $index" class="categorie_article">{{contentDetailCtrl.getTermInTaxo("5a114f1b396588d22856706f",taxo)}}</span>-->
 <!--			<span ng-repeat="taxonomy in contentDetailCtrl.content.taxonomy['5a114f1b396588d22856706f']">{{contentDetailCtrl.getTermInTaxo("5a114f1b396588d22856706f",taxonomy)}}</span>-->
+			<header class="container-fluid content" afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{width:'768px',mode:'boxed'})}} 480w,{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{width:'1600px',mode:'boxed'})}} 1200w"
+				ng-if="fieldEntity['image']"  afkl-lazy-image-options='{"background": true}'>
+			</header>
+			<div class="text-article container">
+					<p class='capital'>{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
+					<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
+						<h1 class="balance-text" ng-if="!fieldEditMode" itemprop="headline">{{fieldEntity['text']}}</h1>
+						<h1 ng-if="fieldEditMode"
+						   ng-controller="RTEFieldController as rteFieldCtrl"
+						   ckeditor="editorOptions"
+						   contenteditable="true"
+						   ready="setCKEIsReady()"
+						   ng-model="fieldEntity['text']"
+						   output-plain-text="true"
+						   ng-bind-html="rteFieldCtrl.html">
+						</h1>
+					</div>
+			</div>
+			<header class="container-fluid" ng-if="!fieldEntity['image']">
+				<div class="text-article container">
+					<p class='capital txt-red' style="text-shadow: none">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
+					<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
+						<h1 class="text-left" ng-if="!fieldEditMode" style="text-shadow: none">{{fieldEntity['text']}}</h1>
+						<h1 ng-if="fieldEditMode"
+						   ng-controller="RTEFieldController as rteFieldCtrl"
+						   ckeditor="editorOptions"
+						   contenteditable="true"
+						   ready="setCKEIsReady()"
+						   ng-model="fieldEntity['text']"
+						   output-plain-text="true"
+						   ng-bind-html="rteFieldCtrl.html">
+						</h1>
+					</div>
+			
+				</div>
+			</header>
+			
+			<div class="col-sm-8 col-sm-push-2" >
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}" class="titre"></rubedo-field><!--Titre-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']" class="redacteur"></rubedo-field><!--Rédacteur-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('summary')}}" ng-if="fieldEntity['summary']" class="resume"></rubedo-field><!--Introduction-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('image')}}" ng-if="fieldEntity['image']" class="bandeau"></rubedo-field>
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" ="contenu_article"></rubedo-field>
-	</div> 
+			</div>
 </div>
 
 <div class="row">
@@ -97,3 +134,284 @@
 	
   
 </div>-->
+
+
+<link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+	<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+<style>
+.modal.rubedoGalleryDetailModal {
+  text-align: center;
+  padding: 0!important;
+}
+
+.modal.rubedoGalleryDetailModal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px; /* Adjusts for spacing */
+}
+
+.modal.rubedoGalleryDetailModal .modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+.modal.rubedoGalleryDetailModal .prev,
+.modal.rubedoGalleryDetailModal .next {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  width: 40px;
+  height: 40px;
+  margin-top: -23px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  line-height: 30px;
+  color: #fff;
+  text-decoration: none;
+  text-shadow: 0 0 2px #000;
+  text-align: center;
+  background: #222;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-box-sizing: content-box;
+     -moz-box-sizing: content-box;
+          box-sizing: content-box;
+  border: 3px solid #fff;
+  -webkit-border-radius: 23px;
+     -moz-border-radius: 23px;
+          border-radius: 23px;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.modal.rubedoGalleryDetailModal  .next {
+  left: auto;
+  right: 15px;
+}
+
+.modal.rubedoGalleryDetailModal .prev:hover,
+.modal.rubedoGalleryDetailModal .next:hover,
+.modal.rubedoGalleryDetailModal .close{padding: 20px; color:white; font-size: 50px; font-weight: 400;}
+.modal.rubedoGalleryDetailModal .close:hover{opacity: 1; color:white}
+
+.modal.rubedoGalleryDetailModal .modal-body {
+	position: relative;
+	text-align: center;
+	padding: 0 0 100vh 0;
+	overflow: hidden;
+	cursor: pointer;
+}
+.modal.rubedoGalleryDetailModal .modal-footer {
+	margin: 0;
+}
+.modal.rubedoGalleryDetailModal .modal-body img {
+	max-width: 100%;
+	max-height: 100%;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+.modal.rubedoGalleryDetailModal .modal-dialog{min-width:300px}
+.modal.rubedoGalleryDetailModal{background-color:black}
+@media screen and (min-width: 768px) {
+  .modal.rubedoGalleryDetailModal .modal-dialog {
+    max-width: 1200px;
+  }
+}
+.modal.in.rubedoGalleryDetailModal{z-index:1056}
+.grid{max-width:1200px; margin: 0 auto; display: block}
+/* fluid 5 columns */
+.masonry-brick { width: 100%;margin-bottom: 5px; cursor: pointer}
+.gutter-sizer{width:0%}
+@media screen and (min-width: 400px) {.masonry-brick { width: 49%; }.gutter-sizer{width:2%}}
+@media screen and (min-width: 768px) {.masonry-brick { width: 32%; }.gutter-sizer{width:2%}}
+@media screen and (min-width: 1200px) {.masonry-brick { width: 24.25%; } .gutter-sizer{width:1%}}
+
+.img-description {
+    background: #fff;
+    background: rgba(255, 255, 255, 0.6);
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+    right: 20px;
+    text-align: center;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    -webkit-transition: opacity 0.4s ease-in-out;
+    -moz-transition: opacity 0.4s ease-in-out;
+    -ms-transition: opacity 0.4s ease-in-out;
+    -o-transition: opacity 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
+}
+.img-description:before, .img-description i {
+    display: inline-block;
+    vertical-align: middle;
+}
+.img-description:before {
+    content: '';
+    height: 100%;
+}
+.masonry-brick:hover .img-description{opacity:1}
+.masonry-brick:not(.loaded) .img-description{display: none}
+
+</style>
+<div class=" content_border" itemscope itemtype="http://schema.org/NewsArticle">
+  <meta itemprop="image" content="{{'https://www.chemin-neuf.fr' + rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'768px',mode:'boxed'}) }}" />
+  <meta itemprop="author" content="{{contentDetailCtrl.content.createUser.fullName}}">
+  <meta itemprop="publisher" content="{{rubedo.current.site.author}}">
+  <meta itemprop="datePublished" content="{{contentDetailCtrl.content.createTime *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
+  <meta itemprop="dateModified" content="{{contentDetailCtrl.content.lastUpdateTime *1000 | date:'yyyy-MM-ddTHH:mm:ssZ' }}">
+	<!--<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<a class="header_link" rubedo-page-link="{{rubedo.current.page.id}}">Retour aux actualités</a>
+			</div>
+		</div>
+	</div>-->
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 ">
+				<div ng-controller="BreadcrumbController as breadcrumbCtrl">
+					<ol class="breadcrumb hidden-xs">
+					    <li ng-class="{'active': !page.url}" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index"><a ng-if="page.url" ng-href="{{page.url}}">{{page.title}}</a><span ng-if="!page.url">{{page.title}}</span></li>
+					</ol>
+					<a class="header_link visible-xs" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index" ng-href="{{page.url}}" ng-if="$first">{{page.title}}</a>
+				</div>
+			</div>
+		</div>
+		<a ng-if="rubedo.current.user.rights.canEdit" ng-href="{{ contentDetailCtrl.content.editorPageUrl}}">
+			<button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span>{{rubedo.translate("Blocks.Contrib.Label.EditContent", "Edit content")}}</button>
+		</a>
+	</div>
+			
+<header class="container-fluid content" afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{width:'768px',mode:'boxed'})}} 480w,{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{width:'1600px',mode:'boxed'})}} 1200w"
+	ng-if="fieldEntity['image']"  afkl-lazy-image-options='{"background": true}'>
+	<div class="text-article container">
+		<p class='capital'>{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
+		<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
+			<h1 class="balance-text" ng-if="!fieldEditMode" itemprop="headline">{{fieldEntity['text']}}</h1>
+			<h1 ng-if="fieldEditMode"
+			   ng-controller="RTEFieldController as rteFieldCtrl"
+			   ckeditor="editorOptions"
+			   contenteditable="true"
+			   ready="setCKEIsReady()"
+			   ng-model="fieldEntity['text']"
+			   output-plain-text="true"
+			   ng-bind-html="rteFieldCtrl.html">
+			</h1>
+		</div>
+
+	</div>
+</header>
+<header class="container-fluid" ng-if="!fieldEntity['image']">
+	<div class="text-article container">
+		<p class='capital txt-red' style="text-shadow: none">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
+		<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
+			<h1 class="text-left" ng-if="!fieldEditMode" style="text-shadow: none">{{fieldEntity['text']}}</h1>
+			<h1 ng-if="fieldEditMode"
+			   ng-controller="RTEFieldController as rteFieldCtrl"
+			   ckeditor="editorOptions"
+			   contenteditable="true"
+			   ready="setCKEIsReady()"
+			   ng-model="fieldEntity['text']"
+			   output-plain-text="true"
+			   ng-bind-html="rteFieldCtrl.html">
+			</h1>
+		</div>
+
+	</div>
+</header>
+
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="text-article">
+
+				<div class="col-xs-12 col-sm-4 col-sm-push-8">
+					<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials" >
+						<!--<a class="addthis_button_facebook_like txt-red" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
+						<a class="addthis_button_facebook txt-red"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
+						<a class="addthis_button_twitter txt-red"><img  class="hidden"><i class="fa fa-twitter-square" data-toggle="tooltip" title="Partager sur Twitter"></i> </a>
+						<a class="addthis_button_email txt-red"><img class="hidden"><i class="fa fa-share-square" data-toggle="tooltip" title="Envoyer par mail"></i></a>
+						<a class="addthis_button_expanded txt-red"><img class="hidden"><i class="fa fa-plus-square" data-toggle="tooltip" title="Plus d'options"></i></a><br/>
+						<span class="txt-red capital" style="display: inline-block" ng-if="nbOfLikes>0">{{nbOfLikes}} partages</span>
+					</div>
+					{{contentDetailCtrl.tooltips()}}
+				</div>
+				
+				<div class="col-xs-12 col-sm-8 col-sm-pull-4">
+					<rubedo-field class="capital tags"  field =  "{{contentDetailCtrl.getFieldByName('author')}}"></rubedo-field><!--Auteur-->					
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 " ng-if="fieldEntity['video']">
+			<div class="text-article">
+				<jwplayer video-url="{{fieldEntity['video']}}"></jwplayer>
+			</div>
+		</div>
+		<div class="col-xs-12">
+			<div class="text-article">
+				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
+				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('copyrights')}}" class="copyrights"></rubedo-field><!--Copyrights-->
+			</div>
+		</div>
+		<div class="col-xs-12">
+			<div class="text-article">
+				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('externalMedia')}}"  ng-if="fieldEntity['externalMedia']" ></rubedo-field><!--Video-->
+				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('audio')}}"   ng-if="fieldEntity['audio']"></rubedo-field><!--Audio-->							
+			</div>
+		</div>
+	</div>
+	<div class="row" >
+		<div class="text-article">
+			<span ng-repeat="taxonomy in contentDetailCtrl.content.taxonomy['5524db6945205e627a8d8c4e']" class="capital tags">
+				{{contentDetailCtrl.getTermInTaxo("5524db6945205e627a8d8c4e",taxonomy)}}
+			</span>
+		</div>
+		
+	</div>
+				<!---ANCIENS ALBUMS (non embedded images)-->
+<div ng-if="contentDetailCtrl.content.fields.images && contentDetailCtrl.content.fields.images.length>0" class="row">
+				<div class="grid" masonry masonry-options="{ gutter: '.gutter-sizer',percentPosition: true }" reload-on-resize>
+								<div class="masonry-brick" ng-repeat="image in contentDetailCtrl.content.fields.images track by $index"  >
+												<img ng-src="{{rubedo.imageUrl.getUrlByMediaId(image,{width:'900',height:'600',mode:'boxed'})}}" style="width:100%"/>
+												<div class="img-description hidden-xs" data-toggle="modal" data-target="#rubedoGalleryDetailModal{{contentDetailCtrl.content.id}}" ng-click="contentDetailCtrl.loadModal($index,false)">
+																<i class="fa fa-expand"></i>
+												</div>
+								</div>
+								<div class="gutter-sizer"></div>
+				</div>
+		<!-- The modal dialog, which will be used to wrap the lightbox content -->
+				<div class="modal fade hidden-xs rubedoGalleryDetailModal" id="rubedoGalleryDetailModal{{contentDetailCtrl.content.id}}" tabindex="1" ng-keydown="contentDetailCtrl.changeImageKey($event,false)">
+								<a class="prev" ng-click="contentDetailCtrl.changeImage('left',false)" ng-if="contentDetailCtrl.currentIndex>0">‹</a>
+								<a class="next" ng-click="contentDetailCtrl.changeImage('right',false)" ng-if="contentDetailCtrl.currentIndex<(contentDetailCtrl.content.fields.images).length-1">›</a>
+								<a class="close" data-dismiss="modal">×</a>
+								<div class="modal-dialog modal-lg">
+												<div class="modal-body">
+																<img class="img-responsive" ng-src="{{rubedo.imageUrl.getUrlByMediaId(contentDetailCtrl.currentImage,{width:'900',height:'600',mode:'boxed'})}}">
+											</div>
+		
+								</div>
+				</div>
+</div>
+	
+	<div class="row border-top" style="margin-top:24px" ng-if="contentDetailCtrl.linkedContents[0]">
+		<h3 class="text-center" style="margin-bottom:24px">{{rubedo.translate("Block.Actus.ReadMore", "À lire aussi :")}}</h3>
+		<div class="col-xs-12 col-sm-4 text-center" ng-repeat="content in contentDetailCtrl.linkedContents">
+			<a ng-href="{{content.url |cleanUrl}}">
+				<img ng-if="content['fields.image'][0]" ng-src="{{rubedo.imageUrl.getUrlByMediaId(content['fields.image'][0],{width:'420px',height:'200px',mode:'crop'})}}" style="width:90%">
+				<img ng-if="!content['fields.image'][0]" src="/theme/cte/img/icons/video-thumb.jpg" style="width:120px">
+				<h3>{{content.title}}</h3>
+			</a>	
+		</div>
+	</div>
+</div>
+
+<div style="margin-top:24px"></div>
+</div>
