--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -285,10 +285,11 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 
 .redacteur {
 		font-size: 0.9em;
+		text-transform: uppercase !important;
 }
 
 .resume {
-		color:@grey;
+		color:@grey !important;
 }
 
 .bandeau img{
