--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -7,45 +7,19 @@
 				ng-if="fieldEntity['image']"  afkl-lazy-image-options='{"background": true}'>
 			</header>
 			<div class="text-article container">
-					<p class='capital'>{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
-					<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
-						<h1 class="balance-text" ng-if="!fieldEditMode" itemprop="headline">{{fieldEntity['text']}}</h1>
-						<h1 ng-if="fieldEditMode"
-						   ng-controller="RTEFieldController as rteFieldCtrl"
-						   ckeditor="editorOptions"
-						   contenteditable="true"
-						   ready="setCKEIsReady()"
-						   ng-model="fieldEntity['text']"
-						   output-plain-text="true"
-						   ng-bind-html="rteFieldCtrl.html">
-						</h1>
-					</div>
+					<p class='capital' style="text-shadow: right">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
 			</div>
 			<header class="container-fluid" ng-if="!fieldEntity['image']">
 				<div class="text-article container">
-					<p class='capital txt-red' style="text-shadow: none">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
-					<div field = "{{contentDetailCtrl.getFieldByName('text')}}" >
-						<h1 class="text-left" ng-if="!fieldEditMode" style="text-shadow: none">{{fieldEntity['text']}}</h1>
-						<h1 ng-if="fieldEditMode"
-						   ng-controller="RTEFieldController as rteFieldCtrl"
-						   ckeditor="editorOptions"
-						   contenteditable="true"
-						   ready="setCKEIsReady()"
-						   ng-model="fieldEntity['text']"
-						   output-plain-text="true"
-						   ng-bind-html="rteFieldCtrl.html">
-						</h1>
-					</div>
-			
+					<p class='capital' style="text-shadow: none">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
 				</div>
 			</header>
 			
 			<div class="col-sm-8 col-sm-push-2" >
-			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}" class="titre"></rubedo-field><!--Titre-->
-			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']" class="redacteur"></rubedo-field><!--Rédacteur-->
-			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('summary')}}" ng-if="fieldEntity['summary']" class="resume"></rubedo-field><!--Introduction-->
-			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('image')}}" ng-if="fieldEntity['image']" class="bandeau"></rubedo-field>
-			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" ="contenu_article"></rubedo-field>
+			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
+			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']" class='redacteur'></rubedo-field><!--Rédacteur-->
+			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('summary')}}" ng-if="fieldEntity['summary']" class='resume'></rubedo-field><!--Introduction-->
+			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" class='contenu_article'></rubedo-field>
 			</div>
 </div>
 
