--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -297,7 +297,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		margin-bottom: 25px;
 }
 
-.contenu_article p{
-		text-align:justify;
+.contenu_article{
+		text-align:justify !important;
 }
 
