--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -7,7 +7,7 @@
 				ng-if="fieldEntity['image']"  afkl-lazy-image-options='{"background": true}'>
 			</header>
 			<div class="text-article container">
-					<p class='capital' style="text-shadow: right">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
+					<p class='capital' style="text-align: right">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
 			</div>
 			<header class="container-fluid" ng-if="!fieldEntity['image']">
 				<div class="text-article container">
