--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -5,6 +5,7 @@
 @bg: #dedede;
 @txt:#252525;
 @grey:#c2c2c2;
+@beige:#f3eeea;
 /*BOOTSTRAP VARIABLES*/
 @width_xxs:420px;
 @min_xs:500px;
@@ -286,6 +287,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 .redacteur {
 		font-size: 0.9em;
 		text-transform: uppercase !important;
+		margin-bottom: 80px !important;
 }
 
 .resume {
@@ -300,4 +302,13 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 .contenu_article{
 		text-align:justify !important;
 }
+
+.presentationArticle{
+		background-color: @beige;
+}
+
+// ADDTHIS TOOLBOX
+.addthis_toolbox a:hover{text-decoration: none}
+.socials {font-size:30px; width: 100%;text-align: center; margin-bottom:12px}
+.txt-red{color:@main !important}
 
