--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -7,6 +7,17 @@
 				ng-if="fieldEntity['image']"  afkl-lazy-image-options='{"background": true}'>
 			</header>
 			<div class="text-article container">
+						<div class="col-xs-12 col-sm-4 col-sm-push-8">
+							<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials" >
+								<!--<a class="addthis_button_facebook_like txt-red" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
+								<a class="addthis_button_facebook"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
+								<a class="addthis_button_twitter"><img  class="hidden"><i class="fa fa-twitter-square" data-toggle="tooltip" title="Partager sur Twitter"></i> </a>
+								<a class="addthis_button_email"><img class="hidden"><i class="fa fa-share-square" data-toggle="tooltip" title="Envoyer par mail"></i></a>
+								<a class="addthis_button_expanded"><img class="hidden"><i class="fa fa-plus-square" data-toggle="tooltip" title="Plus d'options"></i></a><br/>
+								<span class="txt-red capital" style="display: inline-block" ng-if="nbOfLikes>0">{{nbOfLikes}} partages</span>
+							</div>
+							{{contentDetailCtrl.tooltips()}}
+						</div>
 					<p class='capital' style="text-align: right">{{contentDetailCtrl.content.createTime*1000 | date:'longDate'}}</p>
 			</div>
 			<header class="container-fluid" ng-if="!fieldEntity['image']">
@@ -15,7 +26,7 @@
 				</div>
 			</header>
 			
-			<div class="col-sm-8 col-sm-push-2" >
+			<div class="col-sm-8 col-sm-push-2 presentationArticle" >
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']" class='redacteur'></rubedo-field><!--Rédacteur-->
 			<rubedo-field field = "{{contentDetailCtrl.getFieldByName('summary')}}" ng-if="fieldEntity['summary']" class='resume'></rubedo-field><!--Introduction-->
