--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -7,7 +7,7 @@
 				ng-if="fieldEntity['image']"  afkl-lazy-image-options='{"background": true}'>
 			</header>
 			<div class="text-article container">
-						<div class="col-xs-12 col-sm-4 col-sm-push-8">
+						<div class="col-xs-12">
 							<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials" >
 								<!--<a class="addthis_button_facebook_like txt-red" fb:like:layout="button_count"><img class="hidden"><i class="fa fa-thumbs-up" ></i> </a> -->
 								<a class="addthis_button_facebook"><img class="hidden"><i class="fa fa-facebook-official" data-toggle="tooltip" title="Partager sur Facebook"></i> </a>
