--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -310,5 +310,5 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 // ADDTHIS TOOLBOX
 .addthis_toolbox a:hover{text-decoration: none}
 .socials {font-size:30px; width: 100%;text-align: right; margin-bottom:12px}
-.txt-red a{color:@main !important}
+.txt-red{color:@main !important}
 
