--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -284,7 +284,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 		text-align: right;
 }
 
-.redacteur {
+.redacteur p{
 		font-size: 0.9em;
 		text-transform: uppercase !important;
 		margin-bottom: 80px !important;
