--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -8,7 +8,7 @@
         <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Plan-->
 		<div class="sommaire">	
 			<div ng-repeat="content in contentDetailCtrl.infoArticles.data track by $index">
-				<p class="red-sub" ng-repeat="taxo in content['taxonomy.5a114f1b396588d22856706f'] track by $index1" ng-if="taxonomies[$index] !== taxonomies[$index-1] && $index !==0">{{contentDetailCtrl.infoArticles.facetsLabels[taxo]}}</p>
+				<p class="red-sub" ng-repeat="taxo in content['taxonomy.5a114f1b396588d22856706f'] track by $index1" ng-show="displayTaxo[$index]">{{contentDetailCtrl.infoArticles.facetsLabels[taxo]}}</p>
 				<p><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>				
 			</div>
         </div>
