--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -8,8 +8,8 @@
         <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Plan-->
 		<div class="sommaire">	
 			<div ng-repeat="content in contentDetailCtrl.infoArticles.data track by $index">
-				<p class="red-sub" ng-repeat="taxo in content['taxonomy.5a114f1b396588d22856706f'] track by $index" ng-show="displayTaxo[contentDetailCtrl.index]">{{contentDetailCtrl.infoArticles.facetsLabels[taxo]}}</p>
-				<p class="red-sub" ng-show="displayTaxo[$index]">{{content.taxonomy.5a114f1b396588d22856706f[0]}}</p>
+<!--				<p class="red-sub" ng-repeat="taxo in content['taxonomy.5a114f1b396588d22856706f'] track by $index" ng-show="displayTaxo[contentDetailCtrl.index]">{{contentDetailCtrl.infoArticles.facetsLabels[taxo]}}</p>-->
+				<p class="red-sub" ng-show="displayTaxo[$index]">{{contentDetailCtrl.infoArticles.facetsLabels[content['taxonomy.5a114f1b396588d22856706f'][0]]}}</p>
 				<p><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>				
 			</div>
         </div>
