--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -222,7 +222,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
    column-gap:20px;
    padding: 20px 0;
 			p:not(.red-sub){font-weight: bold;margin-bottom:0}
-			p.red-sub{font-size:11px !important; margin-bottom: 24px; text-transform: uppercase}
+			p.red-sub{font-size:20px !important; margin-bottom: 15px; text-transform: uppercase}
 }
 @media screen and (max-width:@min_sm){
   .sommaire{
@@ -276,6 +276,17 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 }
 
 
+
+/*PRESENTATION SOMMAIRE FOI*/
+
+.categorie {
+		margin-bottom: 30px;
+}
+.categorie a{color:@main;font-weight: normal;}
+.categorie	a:hover{text-decoration: none; color:@main;font-weight: bold;}
+
+
+
 /*PRESENTATION ARTICLE FOI*/
 
 .categorie_article {
@@ -306,6 +317,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 .presentationArticle{
 		background-color: @beige;
 }
+
 
 // ADDTHIS TOOLBOX
 .addthis_toolbox a:hover{text-decoration: none}
