--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -282,8 +282,8 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 .categorie {
 		margin-bottom: 30px;
 }
-.categorie a{color:@main;font-weight: normal;}
-.categorie	a:hover{text-decoration: none; color:@main;font-weight: bold;}
+.article a{color:@main;font-weight: normal;}
+.article	a:hover{text-decoration: none; color:@main;font-weight: bold;}
 
 
 
