--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -7,9 +7,10 @@
         <h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;">Sommaire - {{fieldEntity['text']}}</h3>
         <rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Plan-->
 		<div class="sommaire">	
-			<div ng-repeat="content in contentDetailCtrl.infoArticles.data track by $index" class="article">
+			<div ng-repeat="content in contentDetailCtrl.infoArticles.data track by $index">
 				<p class="red-sub" ng-show="displayTaxo[$index]" class="categorie">{{contentDetailCtrl.infoArticles.facetsLabels[content['taxonomy.5a114f1b396588d22856706f'][0]]}}</p>
-				<p><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>				
+				<p  class="article"><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>
+				<div ng-show="!displayTaxo[$index] && displayTaxo[$index+1]"><br/><br/></div>
 			</div>
         </div>
 	</div>
