--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -1,7 +1,7 @@
 
 
 <!--Présentation du Sommaire de la revue classique-->
-<div class="row" ng-if="!pageRevueEnCours">
+<div class="row" ng-show="!pageRevueEnCours">
     
     <div class="col-sm-9 col-sm-push-3">
         <h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;">Sommaire - {{fieldEntity['text']}}</h3>
@@ -25,7 +25,7 @@
 
 
 <!--Présentation de la revue sur la page "REVUE EN COURS"-->
-<div class="row" ng-if="pageRevueEncours">
+<div class="row" ng-show="pageRevueEncours">
     
     <div class="col-sm-12">
         <h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;">Sommaire - {{fieldEntity['text']}}</h3>
