--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -25,7 +25,7 @@
 
 
 <!--Présentation de la revue sur la page "REVUE EN COURS"-->
-<div class="row" ng-show="pageRevueEncours">
+<div class="row" ng-show="pageRevueEnCours">
     
     <div class="col-sm-12">
         <h3 ng-if="!fieldEditMode" style="border-bottom: 1px solid;padding-bottom: 12px;">Sommaire - {{fieldEntity['text']}}</h3>
@@ -38,7 +38,7 @@
 			</div>
         </div>
 	</div>
-		
+		 
 </div>
 
   
