--- a/theme/foi/templates/blocks/contentDetail/foi.html
+++ b/theme/foi/templates/blocks/contentDetail/foi.html
@@ -45,7 +45,7 @@
 				 ng-src="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'300px',mode:'boxed'}) }}"
 				 alt=""/>
 			<ul class="presentation">
-				<li><a ng-href="{{content.fields.link_revue}}" target="_blank">Acheter</a></li>
+				<li><a ng-href="{{fieldEntity['link_revue']}}" target="_blank">Acheter</a></li>
 				<li><a rubedo-page-link="58e51a9c245640db008bde81" target="_blank">S'abonner</a></li>
 			</ul>
 		</div>
