--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -172,6 +172,12 @@ img.hover{
     opacity:1; transition:opacity 0.2s ease;
     &:hover{opacity:0.8}
 }
+.retourne {
+				transform:scale(1,-1) !important;
+}
+.inverse {
+				transform:scale(-1,1) !important; 
+}
 //colors for secondary menu
 
 /*NAVBAR*/
