--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -172,11 +172,11 @@ img.hover{
     opacity:1; transition:opacity 0.2s ease;
     &:hover{opacity:0.8}
 }
-h1 span .retourne {
+h1 span span span .retourne {
 				transform:scale(1,-1) !important;
 }
-h1 span .inverse {
-				transform:scale(-1,1) !important; 
+h1 span span span .inverse {
+				transform:scale(-1,1) !important;  
 }
 //colors for secondary menu
 
