--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -172,10 +172,10 @@ img.hover{
     opacity:1; transition:opacity 0.2s ease;
     &:hover{opacity:0.8}
 }
-h1 span span span .retourne {
+h1 .retourne {
 				transform:scale(1,-1) !important;
 }
-h1 span span span .inverse {
+h1 .inverse {
 				transform:scale(-1,1) !important;  
 }
 //colors for secondary menu
