--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -81,6 +81,10 @@ a:link, a:visited, a:hover,a{text-decoration:none}
     .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse{margin-left:0; max-height:50px; margin-right:0}
 }
 
+@media screen and (min-width: @500px) and (max-width: @768px){
+    .container{width:@mobil;}
+}
+
 /*slider controls*/
 .owl-theme .owl-controls{
 	margin-top:-25px !important;
