--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -5,6 +5,7 @@
 @bg: #dedede;
 @txt:#252525;
 @grey:#c2c2c2;
+@grey2:#aaa;
 @beige:#f3eeea;
 /*BOOTSTRAP VARIABLES*/
 @width_xxs:420px;
@@ -16,8 +17,7 @@
 		h1 {font-size: 48px;}
 }
 .img-responsive{height:auto !important}
-
-
+ 
 
 /*GENERAL DEFINITIONS*/
 body{font-size:16px; min-height:100%; line-height: 1.4em }
@@ -36,6 +36,11 @@ p{color:@txt; font-size:16px}
 		background-color: @grey;
 		p a, li a{box-shadow: inset 0 -2px 0 white; transition: background 0.3s ease; color:@txt; text-decoration: none; }
 		p a:hover, p a:active, li a:hover, li a:active{background-color:white; color:@txt}
+}
+.bg-grey.limitationArticle{
+    border-radius: 5px;
+    margin: 30px 0 50px;
+    box-shadow: 4px 4px 0px @grey2;
 }
 .padding{padding: 30px 25px;}
 .titre{
